# Smart-Mirror

./: .gitignore  Cargo.toml  README.md
src/: components.rs  main.rs
src/components/: quote.rs  weather.rs
ui/: main.slint
