[package]
name = "smart-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.9.2"
serde = {  version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.40"
reqwest = {  version = "0.12.9", features = ["blocking"] }
rand = "0.10.0"
dotenv = "0.15.0"

[build-dependencies]
slint-build = "1.9.2"
